--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,24 @@
 @import url("assistant.css");
 
 body{
+    overflow: overlay;
     width: 100%;
     height: auto;
     padding: 0;
     margin: 0;
     background: #303030;
     background: linear-gradient(178deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 30%, rgba(0,212,255,1) 100%);
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+    background: var(--color-one);
+    border-radius: 25px;
 }
 
 :root {
